--- a/index.html
+++ b/index.html
@@ -55,8 +55,21 @@
 
     <!-- Headers ends -->
 
+    <!-- Hero section -->
+   <section
+      class="text-white bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] flex flex-col items-center p-6 gap-4 text-center"
+    >
+      <img src="assets/logo-dark.png" alt="Logo" class="w-24" />
+      <h1 class="font-bold text-4xl">Emergency Service Directory</h1>
+      <p class="max-w-xl">
+        Government Emergency Services at Your Fingertip – A Project by
+        Government of the People’s Republic of Bangladesh
+      </p>
+    </section>
+ 
+<!-- Hero section ends -->
 
 
-    
+
 </body>
 </html>
