--- a/index.html
+++ b/index.html
@@ -69,7 +69,224 @@
  
 <!-- Hero section ends -->
 
+    <!-- Main Section -->
+    <main class="container mx-auto px-6 py-8">
+      <div class="grid grid-cols-12 gap-8">
 
+        <div
+  id="card-section"
+  class="col-span-12 lg:col-span-9 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+>
+  <!-- Card 1 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+
+      <div class="w-14 h-14 rounded-2xl bg-red-100 flex items-center justify-center shadow-md">
+        <img src="assets/emergency.png" alt="Emergency" class="w-8 h-8 object-contain" />
+      </div>
+
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">National Emergency Number</h2>
+      <p class="text-gray-500 text-sm">National Emergency</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">999</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">All</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-blue-100 flex items-center justify-center shadow-md">
+        <img src="assets/police.png" alt="Police" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Police Helpline Number</h2>
+      <p class="text-gray-500 text-sm">Police</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">999</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Police</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-orange-100 flex items-center justify-center shadow-md">
+        <img src="assets/fire-service.png" alt="Fire Service" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Fire Service Number</h2>
+      <p class="text-gray-500 text-sm">Fire Service</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">999</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Fire</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 4 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-green-100 flex items-center justify-center shadow-md">
+        <img src="assets/ambulance.png" alt="Ambulance" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Ambulance Service</h2>
+      <p class="text-gray-500 text-sm">Ambulance</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">999</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Health</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 5 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-pink-100 flex items-center justify-center shadow-md">
+        <img src="assets/emergency.png" alt="Women and Child" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Women & Child Helpline</h2>
+      <p class="text-gray-500 text-sm">Women & Child</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">109</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Help</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 6 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-yellow-100 flex items-center justify-center shadow-md">
+        <img src="assets/emergency.png" alt="Anti-corruption" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Anti-Corruption Helpline</h2>
+      <p class="text-gray-500 text-sm">Anti-Corruption</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">106</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Help</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+
+  <!-- Card 7 -->
+  <div class="card bg-white shadow-lg rounded-2xl p-5 border border-gray-100">
+    <div class="flex justify-between items-start">
+      <div class="w-14 h-14 rounded-2xl bg-purple-100 flex items-center justify-center shadow-md">
+        <img src="assets/emergency.png" alt="Electricity" class="w-8 h-8 object-contain" />
+      </div>
+      <button class="btn btn-ghost btn-sm p-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.347-1.9-4.25-4.25-4.25-1.427 0-2.676.69-3.5 1.76A4.25 4.25 0 0 0 9.75 4C7.4 4 5.5 5.903 5.5 8.25c0 3.65 5.86 7.86 6.86 8.61.25.19.53.29.82.29s.57-.1.82-.29c1-0.75 6.86-4.96 6.86-8.61z" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-3">
+      <h2 class="font-semibold text-lg leading-tight">Electricity Helpline</h2>
+      <p class="text-gray-500 text-sm">Electricity Outage</p>
+    </div>
+    <div class="mt-4">
+      <p class="text-3xl font-bold">121</p>
+      <span class="bg-gray-100 text-gray-600 px-3 py-1 rounded-full text-sm">Electricity</span>
+    </div>
+    <div class="mt-5 flex gap-3">
+      <button class="btn btn-outline w-1/2">Copy</button>
+      <button class="btn btn-success w-1/2">Call</button>
+    </div>
+  </div>
+</div>
+
+        <!-- History Section -->
+        <div
+          class="col-span-12 lg:col-span-3 bg-white rounded-lg shadow-md p-6"
+        >
+          <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl font-bold">Call History</h2>
+            <button
+              id="clear-history"
+              class="text-sm text-gray-500 hover:text-red-500"
+            >
+              Clear History
+            </button>
+          </div>
+          <div id="history-section" class="space-y-2">
+          </div>
+        </div>
+      </div>
+    </main>
 
 </body>
 </html>
